--- a/Browse/browse.css
+++ b/Browse/browse.css
@@ -69,3 +69,50 @@ body {
     height: 20px;
     margin-right: 12px;
 }
+.main-content{
+    margin-left: 240px;
+    flex: 1;
+    padding: 30px 40px;
+}
+.top-menu{
+    display: flex;
+    margin-bottom: 40px;
+}
+.search-bar {
+    padding: 16px 16px;
+    border: 1px solid #e0e0e0;
+    background: white;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.2s;
+    width: 200%;
+}
+.filter-button{
+    padding: 16px 20px;
+    background: white;
+    color: black;
+    border: 1px solid #e0e0e0;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.2s;
+    gap : 8px;
+}
+.search-button {
+    padding: 16px 20px;
+    background: #000;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.2s;
+    gap : 8px;
+}
+
+.search-button:hover {
+    background: #333;
+}
