--- a/AuctionItem/auction_item.css
+++ b/AuctionItem/auction_item.css
@@ -126,6 +126,28 @@ body {
   margin-bottom: 25px;
 }
 
+/* Item Description */
+.item-description {
+  margin-top: 35px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+.item-description h3 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #222;
+}
+
+.item-description p {
+  font-size: 15px;
+  line-height: 1.6;
+  color: #555;
+  text-align: left;
+}
+
 .info-grid {
   display: flex;
   flex-direction: column;
