--- a/Browse/browse.css
+++ b/Browse/browse.css
@@ -101,6 +101,30 @@ body {
     transition: all 0.2s;
     gap : 8px;
 }
+.wrapper{
+    position: relative;
+    display: inline-block;
+}
+.filter-button:hover{
+    background: rgb(240, 240, 240);
+}
+.filter-content{
+    display: none;
+    position : absolute;
+    background: white;
+    border: 1px solid #e0e0e0;
+    min-width: 160px;
+
+}
+.filter-content.show {
+    display: block;
+}
+.filter-element{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
 .search-button {
     padding: 16px 20px;
     background: #000;
