--- a/Cart/cart.css
+++ b/Cart/cart.css
@@ -90,6 +90,10 @@ body {
     transition: all 0.2s;
     width: 200%;
 }
+.wrapper{
+    position: relative;
+    display: inline-block;
+}
 .filter-button{
     padding: 16px 20px;
     background: white;
@@ -100,6 +104,26 @@ body {
     font-weight: 600;
     transition: all 0.2s;
     gap : 8px;
+}
+.filter-button:hover{
+    background: rgb(240, 240, 240);
+}
+.filter-content{
+    display: none;
+    position : absolute;
+    background: white;
+    border: 1px solid #e0e0e0;
+    min-width: 160px;
+
+}
+.filter-content.show {
+    display: block;
+}
+.filter-element{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 .search-button {
     padding: 16px 20px;
