--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -4,8 +4,11 @@
     padding: 30px 20px;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.05);
     position: fixed;
+    left: 0;
+    top: 0;
     height: 100vh;
     overflow-y: auto;
+    z-index: 1000
 }
 
 .logo {
