Feature: User who isn't signed in cannot access profile page

--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -65,7 +65,9 @@
     color: #666;
     text-decoration: none;
 }
-
+.nav-item.inactive {
+    display: none;
+}
 .nav-item:hover {
     background: #f5f5f5;
     color: #333;
